--- a/X Cruise/index.html
+++ b/X Cruise/index.html
@@ -1,135 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XCruise</title>
-    <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Linking external stylesheet -->
+  <link rel="stylesheet" href="/css/styles.css" />
+
+  <title>xCruise - Explore the Seas</title>
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/logo.png?raw=true" class="logo" alt="Logo">
-        <div class="menu">
-            <a href="#">Home</a>
-            <a href="#">Cruises</a>
-            <a href="#">Packages</a>
-            <a href="#contact">Contact</a>
-        </div>
-    </nav>
 
-    <!-- Hero Section -->
-    <div class="hero">
-        <h1>Explore the Oceans with Us</h1>
-        <p>Luxury Cruises at Unbeatable Prices</p>
-        <button>Book Now</button>
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <!-- Company Logo -->
+    <div class="logo">
+      <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/xCruise-logo.png?raw=true" alt="xCruise Logo" />
     </div>
 
-    <!-- Main Content -->
-    <main>
-        <!-- Heading Section -->
-        <section class="heading">
-            <h2>Popular Cruises</h2>
-            <p>Discover our top-rated cruise experiences</p>
-        </section>
+    <!-- Menu Links -->
+    <div class="menu">
+      <a href="#">Home</a>
+      <a href="#">Destinations</a>
+      <a href="#">Deals</a>
+    </div>
+  </nav>
 
-        <!-- Tags / Filters -->
-        <section class="popular">
-            <h3>Categories:</h3>
-            <div class="pills">
-                <div><img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/beach.png?raw=true">Beach</div>
-                <div><img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/mountain.png?raw=true">Mountain</div>
-                <div><img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/culture.png?raw=true">Culture</div>
-            </div>
-        </section>
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>Embark on Unforgettable Journeys with Us</h1>
+    <h2>Your Gateway to Unseen Horizons</h2>
+    <button>Book Now</button>
+  </section>
 
-        <!-- Banner Image -->
-        <section class="banner">
-            <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/banner.png?raw=true" alt="Cruise Banner">
-        </section>
+  <!-- Destination Discovery Section -->
+  <section class="discover">
+    <!-- Heading and Description -->
+    <div class="heading">
+      <h2>Explore Our Cruise Routes</h2>
+      <p>Travel through turquoise waters, historic wonders, and breathtaking landscapes with xCruise.</p>
 
-        <!-- Cruise Cards Grid -->
-        <section class="grids">
-            <div class="card">
-                <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/cruise1.jpg?raw=true" alt="Cruise 1">
-                <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/bookmark.png?raw=true" class="bookmark">
-                <div class="card_info">
-                    <h4>Caribbean Escape</h4>
-                    <p>$899 - 7 Days</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/cruise2.jpg?raw=true" alt="Cruise 2">
-                <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/bookmark.png?raw=true" class="bookmark">
-                <div class="card_info">
-                    <h4>Mediterranean Dream</h4>
-                    <p>$999 - 10 Days</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/cruise3.jpg?raw=true" alt="Cruise 3">
-                <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/bookmark.png?raw=true" class="bookmark">
-                <div class="card_info">
-                    <h4>Alaskan Voyage</h4>
-                    <p>$799 - 5 Days</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/cruise4.jpg?raw=true" alt="Cruise 4">
-                <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/bookmark.png?raw=true" class="bookmark">
-                <div class="card_info">
-                    <h4>Baltic Capitals</h4>
-                    <p>$1,099 - 12 Days</p>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <hr>
-        <div class="contact_info">
-            <div>
-                <h4>Email</h4>
-                <p>info@cruise.com</p>
-            </div>
-            <div>
-                <h4>Phone</h4>
-                <p>+1 234 567 890</p>
-            </div>
-            <div>
-                <h4>Address</h4>
-                <p>123 Ocean Drive, Miami, FL</p>
-            </div>
+      <!-- Popular Tags -->
+      <div class="popular">
+        <h4>Trending:</h4>
+        <div class="pills">
+          <div>
+            <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/weekend-cruises-pill.png?raw=true" alt="" />
+            <span>Weekend Cruises</span>
+          </div>
+          <div>
+            <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/summer-cruises-pill.png?raw=true" alt="" />
+            <span>Summer Cruises</span>
+          </div>
+          <div>
+            <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/exotic-cruises-pill.png?raw=true" alt="" />
+            <span>Exotic Cruises</span>
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
 
-    <!-- Footer -->
-    <footer>
-        <div class="last_info">
-            <div class="foot_info">
-                <h3>About</h3>
-                <p>Luxury cruises since 1990</p>
-                <p>Top-rated customer service</p>
-            </div>
-            <div class="foot_info">
-                <h3>Explore</h3>
-                <p>Destinations</p>
-                <p>Offers</p>
-            </div>
-            <div class="foot_info">
-                <h3>Follow Us</h3>
-                <div class="social-icons">
-                    <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/facebook.png?raw=true" alt="Facebook">
-                    <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/instagram.png?raw=true" alt="Instagram">
-                    <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/twitter.png?raw=true" alt="Twitter">
-                </div>
-            </div>
+    <!-- Promotional Banner -->
+    <div class="banner">
+      <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark Icon" class="bookmark" />
+      <div class="banner-content">
+        <h3>CARIBBEAN & THE BAHAMAS</h3>
+        <h4>Tropical ambiance and clear blue waters</h4>
+      </div>
+    </div>
+
+    <!-- Cruise Cards -->
+    <div class="cards">
+      <!-- Individual Destination Cards -->
+      <div class="card" id="card1">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <h4>MEDITERRANEAN</h4>
+        <h5>Stunning coastlines and vibrant culture</h5>
+      </div>
+      <div class="card" id="card2">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <h4>DUBAI & ABU DHABI</h4>
+        <h5>Modern marvels meet desert charm</h5>
+      </div>
+      <div class="card" id="card3">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <h4>NORTHERN EUROPE</h4>
+        <h5>Fjords, castles, and timeless cities</h5>
+      </div>
+      <div class="card" id="card4">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <h4>RED SEA</h4>
+        <h5>Warm waters and exotic coral reefs</h5>
+      </div>
+      <div class="card" id="card5">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <h4>BERMUDA</h4>
+        <h5>Pastel shores and vibrant culture</h5>
+      </div>
+      <div class="card" id="card6">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <h4>SOUTH AFRICA</h4>
+        <h5>Adventure along rugged coastlines</h5>
+      </div>
+      <div class="card" id="card7">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <h4>SOUTH AMERICA</h4>
+        <h5>Rainforests, rhythms, and rivers</h5>
+      </div>
+      <div class="card" id="card8">
+        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <h4>ASIA</h4>
+        <h5>Ancient wonders and modern cities</h5>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Information Section -->
+  <section id="contact">
+    <h3>Get in Touch</h3>
+    <div class="contact_info">
+      <div class="contact_information">
+        <h4>Our Address</h4>
+        <p>6750 N. Andrews Avenue Suite 100 Fort Lauderdale, FL 33309</p>
+        <p>Phone: +62-813 346 100</p>
+      </div>
+      <div class="hours_of_operation">
+        <h4>Office Hours</h4>
+        <p>Weekdays: 8:00 AM - 11:00 PM EST</p>
+        <p>Weekends: 9:00 AM - 9:00 PM EST</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer Section -->
+  <footer class="footer">
+    <div class="footer_content">
+      <!-- Destinations -->
+      <div class="top">
+        <h3>TOP DESTINATIONS</h3>
+        <p>New York City</p>
+        <p>Paris</p>
+        <p>Italy</p>
+        <p>Costa Rica</p>
+        <p>Japan</p>
+        <p>USA</p>
+        <p>Amsterdam</p>
+      </div>
+
+      <!-- Travel Interests -->
+      <div class="travel">
+        <h3>TRAVEL THEMES</h3>
+        <p>Adventure Travel</p>
+        <p>Beach Escapes</p>
+        <p>Family-Friendly Trips</p>
+      </div>
+
+      <!-- About Section -->
+      <div class="about">
+        <h3>ABOUT US</h3>
+        <p>Company Info</p>
+        <p>Contact</p>
+        <p>Privacy Policy</p>
+        <p>Careers</p>
+        <p>Sitemap</p>
+      </div>
+
+      <!-- Branding and Social Media -->
+      <div class="xcruise">
+        <h3>XCRUISE</h3>
+        <p>For Explorers Everywhere</p>
+        <h3>CONNECT WITH US</h3>
+        <div class="social-icons">
+          <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/instagram-icon.png?raw=true" alt="Instagram" />
+          <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/facebook-icon.png?raw=true" alt="Facebook" />
+          <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/youtube-icon.png?raw=true" alt="YouTube" />
+          <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/gmail-icon.png?raw=true" alt="Gmail" />
         </div>
-        <div class="footer_rights">
-            <p>&copy; 2024 XCruise. All rights reserved.</p>
-        </div>
-    </footer>
+      </div>
+    </div>
+
+    <!-- Footer Rights -->
+    <div class="footer_rights">
+      © 2024 xCruise Inc. All Rights Reserved
+    </div>
+  </footer>
+
 </body>
 </html>
