--- a/X Cruise/index.html
+++ b/X Cruise/index.html
@@ -8,7 +8,7 @@
   <!-- Linking external stylesheet -->
   <link rel="stylesheet" href="/css/styles.css" />
 
-  <title>xCruise - Explore the Seas</title>
+  <title>XCruise</title>
 </head>
 <body>
 
