--- a/X Cruise/index.html
+++ b/X Cruise/index.html
@@ -16,7 +16,7 @@
   <nav class="navbar">
     <!-- Company Logo -->
     <div class="logo">
-      <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/xCruise-logo.png?raw=true" alt="xCruise Logo" />
+      <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/xCruise-logo.png" alt="xCruise Logo" />
     </div>
 
     <!-- Menu Links -->
@@ -46,15 +46,15 @@
         <h4>Trending:</h4>
         <div class="pills">
           <div>
-            <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/weekend-cruises-pill.png?raw=true" alt="" />
+            <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/weekend-cruises-pill.png" alt="" />
             <span>Weekend Cruises</span>
           </div>
           <div>
-            <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/summer-cruises-pill.png?raw=true" alt="" />
+            <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/summer-cruises-pill.png" alt="" />
             <span>Summer Cruises</span>
           </div>
           <div>
-            <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/exotic-cruises-pill.png?raw=true" alt="" />
+            <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/exotic-cruises-pill.png" alt="" />
             <span>Exotic Cruises</span>
           </div>
         </div>
@@ -63,7 +63,7 @@
 
     <!-- Promotional Banner -->
     <div class="banner">
-      <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark Icon" class="bookmark" />
+      <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark Icon" class="bookmark" />
       <div class="banner-content">
         <h3>CARIBBEAN & THE BAHAMAS</h3>
         <h4>Tropical ambiance and clear blue waters</h4>
@@ -74,42 +74,42 @@
     <div class="cards">
       <!-- Individual Destination Cards -->
       <div class="card" id="card1">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
         <h4>MEDITERRANEAN</h4>
         <h5>Stunning coastlines and vibrant culture</h5>
       </div>
       <div class="card" id="card2">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
         <h4>DUBAI & ABU DHABI</h4>
         <h5>Modern marvels meet desert charm</h5>
       </div>
       <div class="card" id="card3">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
         <h4>NORTHERN EUROPE</h4>
         <h5>Fjords, castles, and timeless cities</h5>
       </div>
       <div class="card" id="card4">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
         <h4>RED SEA</h4>
         <h5>Warm waters and exotic coral reefs</h5>
       </div>
       <div class="card" id="card5">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
         <h4>BERMUDA</h4>
         <h5>Pastel shores and vibrant culture</h5>
       </div>
       <div class="card" id="card6">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
         <h4>SOUTH AFRICA</h4>
         <h5>Adventure along rugged coastlines</h5>
       </div>
       <div class="card" id="card7">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
         <h4>SOUTH AMERICA</h4>
         <h5>Rainforests, rhythms, and rivers</h5>
       </div>
       <div class="card" id="card8">
-        <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/save-icon.png?raw=true" alt="Bookmark" class="bookmarks" />
+        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
         <h4>ASIA</h4>
         <h5>Ancient wonders and modern cities</h5>
       </div>
@@ -172,10 +172,10 @@
         <p>For Explorers Everywhere</p>
         <h3>CONNECT WITH US</h3>
         <div class="social-icons">
-          <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/instagram-icon.png?raw=true" alt="Instagram" />
-          <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/facebook-icon.png?raw=true" alt="Facebook" />
-          <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/youtube-icon.png?raw=true" alt="YouTube" />
-          <img src="https://github.com/Mohak-Trivedi/xCruise/blob/main/assests/gmail-icon.png?raw=true" alt="Gmail" />
+          <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/instagram-icon.png" alt="Instagram" />
+          <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/facebook-icon.png" alt="Facebook" />
+          <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/youtube-icon.png" alt="YouTube" />
+          <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/gmail-icon.png" alt="Gmail" />
         </div>
       </div>
     </div>
