--- a/X Cruise/index.html
+++ b/X Cruise/index.html
@@ -1,190 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <!-- Linking external stylesheet -->
-  <link rel="stylesheet" href="/css/styles.css" />
-
-  <title>XCruise</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>XCruise-Landing-Page</title>
+    <!-- Link to external stylesheet -->
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-
-  <!-- Navigation Bar -->
-  <nav class="navbar">
-    <!-- Company Logo -->
-    <div class="logo">
-      <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/xCruise-logo.png" alt="xCruise Logo" />
-    </div>
-
-    <!-- Menu Links -->
-    <div class="menu">
-      <a href="#">Home</a>
-      <a href="#">Destinations</a>
-      <a href="#">Deals</a>
-    </div>
-  </nav>
-
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>Embark on Unforgettable Journeys with Us</h1>
-    <h2>Your Gateway to Unseen Horizons</h2>
-    <button>Book Now</button>
-  </section>
-
-  <!-- Destination Discovery Section -->
-  <section class="discover">
-    <!-- Heading and Description -->
-    <div class="heading">
-      <h2>Explore Our Cruise Routes</h2>
-      <p>Travel through turquoise waters, historic wonders, and breathtaking landscapes with xCruise.</p>
-
-      <!-- Popular Tags -->
-      <div class="popular">
-        <h4>Trending:</h4>
-        <div class="pills">
-          <div>
-            <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/weekend-cruises-pill.png" alt="" />
-            <span>Weekend Cruises</span>
-          </div>
-          <div>
-            <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/summer-cruises-pill.png" alt="" />
-            <span>Summer Cruises</span>
-          </div>
-          <div>
-            <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/exotic-cruises-pill.png" alt="" />
-            <span>Exotic Cruises</span>
-          </div>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <div class="logo">
+            <!-- xCruise logo -->
+            <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/xCruise-logo.png?raw=true" alt="xCruise logo" />
         </div>
-      </div>
-    </div>
-
-    <!-- Promotional Banner -->
-    <div class="banner">
-      <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark Icon" class="bookmark" />
-      <div class="banner-content">
-        <h3>CARIBBEAN & THE BAHAMAS</h3>
-        <h4>Tropical ambiance and clear blue waters</h4>
-      </div>
-    </div>
-
-    <!-- Cruise Cards -->
-    <div class="cards">
-      <!-- Individual Destination Cards -->
-      <div class="card" id="card1">
-        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
-        <h4>MEDITERRANEAN</h4>
-        <h5>Stunning coastlines and vibrant culture</h5>
-      </div>
-      <div class="card" id="card2">
-        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
-        <h4>DUBAI & ABU DHABI</h4>
-        <h5>Modern marvels meet desert charm</h5>
-      </div>
-      <div class="card" id="card3">
-        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
-        <h4>NORTHERN EUROPE</h4>
-        <h5>Fjords, castles, and timeless cities</h5>
-      </div>
-      <div class="card" id="card4">
-        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
-        <h4>RED SEA</h4>
-        <h5>Warm waters and exotic coral reefs</h5>
-      </div>
-      <div class="card" id="card5">
-        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
-        <h4>BERMUDA</h4>
-        <h5>Pastel shores and vibrant culture</h5>
-      </div>
-      <div class="card" id="card6">
-        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
-        <h4>SOUTH AFRICA</h4>
-        <h5>Adventure along rugged coastlines</h5>
-      </div>
-      <div class="card" id="card7">
-        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
-        <h4>SOUTH AMERICA</h4>
-        <h5>Rainforests, rhythms, and rivers</h5>
-      </div>
-      <div class="card" id="card8">
-        <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/save-icon.png" alt="Bookmark" class="bookmarks" />
-        <h4>ASIA</h4>
-        <h5>Ancient wonders and modern cities</h5>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact Information Section -->
-  <section id="contact">
-    <h3>Get in Touch</h3>
-    <div class="contact_info">
-      <div class="contact_information">
-        <h4>Our Address</h4>
-        <p>6750 N. Andrews Avenue Suite 100 Fort Lauderdale, FL 33309</p>
-        <p>Phone: +62-813 346 100</p>
-      </div>
-      <div class="hours_of_operation">
-        <h4>Office Hours</h4>
-        <p>Weekdays: 8:00 AM - 11:00 PM EST</p>
-        <p>Weekends: 9:00 AM - 9:00 PM EST</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer Section -->
-  <footer class="footer">
-    <div class="footer_content">
-      <!-- Destinations -->
-      <div class="top">
-        <h3>TOP DESTINATIONS</h3>
-        <p>New York City</p>
-        <p>Paris</p>
-        <p>Italy</p>
-        <p>Costa Rica</p>
-        <p>Japan</p>
-        <p>USA</p>
-        <p>Amsterdam</p>
-      </div>
-
-      <!-- Travel Interests -->
-      <div class="travel">
-        <h3>TRAVEL THEMES</h3>
-        <p>Adventure Travel</p>
-        <p>Beach Escapes</p>
-        <p>Family-Friendly Trips</p>
-      </div>
-
-      <!-- About Section -->
-      <div class="about">
-        <h3>ABOUT US</h3>
-        <p>Company Info</p>
-        <p>Contact</p>
-        <p>Privacy Policy</p>
-        <p>Careers</p>
-        <p>Sitemap</p>
-      </div>
-
-      <!-- Branding and Social Media -->
-      <div class="xcruise">
-        <h3>XCRUISE</h3>
-        <p>For Explorers Everywhere</p>
-        <h3>CONNECT WITH US</h3>
-        <div class="social-icons">
-          <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/instagram-icon.png" alt="Instagram" />
-          <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/facebook-icon.png" alt="Facebook" />
-          <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/youtube-icon.png" alt="YouTube" />
-          <img src="https://raw.githubusercontent.com/Mohak-Trivedi/xcruise-assets/refs/heads/master/gmail-icon.png" alt="Gmail" />
+        <div class="menu">
+            <!-- Navigation menu items -->
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#Destinations">Destinations</a></li>
+            <li><a href="#Deals">Deals</a></li>
         </div>
-      </div>
-    </div>
+    </nav>
 
-    <!-- Footer Rights -->
-    <div class="footer_rights">
-      © 2024 xCruise Inc. All Rights Reserved
-    </div>
-  </footer>
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h1>DISCOVER THE BEAUTY OF CRUISING WITH US</h1>
+            <p>For a Greater Beauty</p>
+        </div>
+        <button class="btn">
+            <a href="#" class="Book-Now">Book Now</a>
+        </button>
+    </section>
 
+    <!-- Discover Destinations Section -->
+    <section class="discover">
+        <div class="discover-container">
+            <div class="heading">
+                <h2 class="text-content">DISCOVER OUR DESTINATIONS</h2>
+                <p class="text-content2">
+                    Sail to crystal-clear seas, historical sites, and boundless nature, Discover a greater beauty with xCruise
+                </p>
+                <div class="popular">
+                    <p>popular :</p>
+                    <!-- Popular cruise types with pill images -->
+                    <div class="pills">
+                        <div>
+                            <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/weekend-cruises-pill.png?raw=true" alt="weekend-cruises-pill" />
+                        </div>
+                        <span>Weekend Cruises</span>
+                    </div>
+                    <div class="pills">
+                        <div>
+                            <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/summer-cruises-pill.png?raw=true" alt="summer-cruises-pill" />
+                        </div>
+                        <span>Summer Cruises</span>
+                    </div>
+                    <div class="pills">
+                        <div>
+                            <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/exotic-cruises-pill.png?raw=true" alt="exotic-cruises-pill" />
+                        </div>
+                        <span>Exotic Cruises</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Main Banner Destination -->
+            <div class="discover-section-banner">
+                <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/caribbean-cruise.png?raw=true" alt="Caribbean & the Bahamas" />
+                <span class="destination-info">
+                    <h3>Caribbean & The Bahamas</h3>
+                    <p>Crystal-clear waters and tropical vibes</p>
+                </span>
+            </div>
+
+            <!-- Grid of Destination Cards -->
+            <div class="destination-grid">
+                <div class="card">
+                    <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/mediterranean-cruise.png?raw=true" alt="Mediterranean" />
+                    <span class="destination-info">
+                        <h4>MEDITERRANEAN</h4>
+                        <p>Ancient cultures and stunning coastlines</p>
+                    </span>
+                </div>
+                <div class="card">
+                    <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/dubai-cruise.png?raw=true" alt="Dubai & Abu Dhabi" />
+                    <span class="destination-info">
+                        <h4>DUBAI & ABU DHABI</h4>
+                        <p>Modern skyscrapers and vibrant nightlife</p>
+                    </span>
+                </div>
+                <div class="card img2">
+                    <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/northern-europe-cruise.png?raw=true" alt="Northern Europe" />
+                    <span class="destination-info">
+                        <h4>Northern Europe</h4>
+                        <p>Fascinating nature and picturesque sights</p>
+                    </span>
+                </div>
+                <div class="card img3">
+                    <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/redsea-cruise.png?raw=true" alt="Red Sea" />
+                    <span class="destination-info">
+                        <h4>RED SEA</h4>
+                        <p>White-sand beaches and sun-kissed waters</p>
+                    </span>
+                </div>
+                <div class="card img4">
+                    <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/bermuda-beach-cruise.png?raw=true" alt="Bermuda" />
+                    <span class="destination-info">
+                        <h4>BERMUDA</h4>
+                        <p>Discover pink-sand beaches</p>
+                    </span>
+                </div>
+                <div class="card img5">
+                    <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/south-africa-cruise.png?raw=true" alt="South Africa" />
+                    <span class="destination-info">
+                        <h4>SOUTH AFRICA</h4>
+                        <p>Lush natural settings and exotic wildlife</p>
+                    </span>
+                </div>
+                <div class="card img6">
+                    <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/south-america-cruise.png?raw=true" alt="SOUTH AMERICA" />
+                    <span class="destination-info">
+                        <h4>SOUTH AMERICA</h4>
+                        <p>A blend of culture and ancient mystique</p>
+                    </span>
+                </div>
+                <div class="card img7">
+                    <img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/asia-cruise.png?raw=true" alt="Asia" />
+                    <span class="destination-info">
+                        <h4>Asia</h4>
+                        <p>A blend of culture and ancient mystique</p>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h3>Contact Us</h3>
+        <div class="contact_info">
+            <div>
+                <h4>Contact Information</h4>
+                <p>6750 N. Andrews Avenue Suite 100 Fort Lauderdale, FL 33309</p>
+                <p>Call Us: +62-813 346 100</p>
+            </div>
+            <div>
+                <h4>Hours of Operation</h4>
+                <p>Mon-Fri: 8:00 am - 11:00 pm EST</p>
+                <p>Sat-Sun: 9:00 am - 9:00 pm EST</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <h4>TOP DESTINATIONS</h4>
+                <ul>
+                    <li>New York City</li>
+                    <li>Paris</li>
+                    <li>Italy</li>
+                    <li>Costa Rica</li>
+                    <li>Japan</li>
+                    <li>USA</li>
+                    <li>Amsterdam</li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h4>TRAVEL INTERESTS</h4>
+                <ul>
+                    <li>Adventure Travel</li>
+                    <li>Beaches, Coasts and Islands</li>
+                    <li>Family Holidays</li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h4>ABOUT US</h4>
+                <ul>
+                    <li>About xCruise</li>
+                    <li>Contact Us</li>
+                    <li>Privacy Policy</li>
+                    <li>Work For Us</li>
+                    <li>Sitemap</li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h4>XCRUISE</h4>
+                <p>For Explorers Everywhere</p>
+                <h4>FOLLOW US</h4>
+                <div class="social-icons">
+                    <a href="#"><img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/instagram-icon.png?raw=true" alt="Instagram" /></a>
+                    <a href="#"><img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/facebook-icon.png?raw=true" alt="Facebook" /></a>
+                    <a href="#"><img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/youtube-icon.png?raw=true" alt="YouTube" /></a>
+                    <a href="#"><img src="https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/gmail-icon.png?raw=true" alt="GMail" /></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer_rights">
+            <p>© 2024 xCruise In. All rights reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
